# ONES-ZERO

./: CONTRIBUTING.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  database_compatibility.yml  feature_request.yml  question.yml
.github/scripts/: augment-latest-json-jdbc-plugin.mjs  check-jdbc-plugin-version.mjs
.github/workflows/: 1panel-appstore.yml  agents-release.yml  docs.yml  project-triage.yml  publish-packages.yml  sync-changelog.yml
agents/drivers/oracle-go/: main.go  main_test.go
apps/: README.md
apps/desktop/: components.json  vite.config.ts
apps/desktop/src/: App.vue  main.ts
apps/desktop/src/components/icons/: AppLogo.vue
apps/desktop/src/components/layout/: AppSidebar.vue  AppToolbar.vue  ContentArea.vue
apps/desktop/src/components/ui/context-menu/: ContextMenu.vue  ContextMenuCheckboxItem.vue  ContextMenuItem.vue  ContextMenuRadioItem.vue  ContextMenuSubContent.vue  ContextMenuTrigger.vue
apps/desktop/src/components/ui/dropdown-menu/: DropdownMenu.vue  DropdownMenuCheckboxItem.vue  DropdownMenuContent.vue  (+3 more)
apps/desktop/src/composables/: useToast.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/i18n/locales/: en.ts  zh-CN.ts
apps/desktop/src/lib/: appTheme.ts  safeStorage.ts  utils.ts
apps/desktop/src/stores/: settingsStore.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs
src-tauri/windows/nsis/: installer.nsi
(+11 files in other folders)
