[package]
name = "ones-zero-desktop"
version = "1.0.0"
description = "A beautiful clean template framework desktop application"
authors = ["ones-zero"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ones_zero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-clipboard-manager = "2.3.2"
